# spiral-core

./: .env.example  .env.hurl  .gitignore  .markdownlint.json  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CONTAINER_MODE.md  COUPLING_REPORT.md  Cargo.toml  DEV_CONTAINER.md  DOUBLE_CHECK_ITEMS.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION.md  LICENSE  Makefile  NAMING_ENHANCEMENT.md  QUICK_DISCORD_SETUP.md  README.md  SETUP_STATUS.md  SOFTWARE_DEVELOPER_AGENT_PROMPT.md  SPIRAL_CODE.md  build.sh  claude-docs-coordinator.sh  demo-enhanced.sh  demo.sh  deny.toml  docker-compose.dev.yml  factorial.rs  package-lock.json  package.json  start-spiral-core.sh  stop-spiral-core.sh  test-pre-commit.md
.cargo/: config.toml
.claude/: INDEX.md  settings.local.json  spawn-agent.sh
.devcontainer/: BUILD-PERFORMANCE.md  DEVCONTAINER-GUIDE.md  Dockerfile  Dockerfile.fast  README.md  aliases.sh  devcontainer.json  docker-compose.yml  post-create.sh  test-container.sh
.githooks/: pre-commit
.github/: FUNDING.yml
.husky/: pre-commit
docs/: AGENT_INTERACTION_MODEL.md  AGGRESSIVE_PROXIMITY_AUDIT.md  AGGRESSIVE_PROXIMITY_AUDIT_2025.md  ANTI_PATTERNS.md  API.md  ARCHITECTURE.md  ARCHITECTURE_AGENTS.md  ARCHITECTURE_DEPLOYMENT.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_WORKFLOWS.md  AUDIT_DOCUMENTATION_STANDARD.md  CLAUDE-agents-developer.md  CLAUDE-agents-pm.md  CLAUDE-core-coding-standards.md  CLAUDE-implementation-phase1.md  CLAUDE-integrations-claude-code.md  CLAUDE-integrations-discord.md  CLAUDE-integrations-github.md  CLAUDE_AGENT_VALIDATION.md  CLAUDE_COMPLETION_CHECKLIST.md  CLAUDE_IMPROVER_USAGE.md  CLAUDE_SPAWN_EXAMPLE.md  CODE_REVIEW_TEMPLATES.md  CODING_EXAMPLES.md  CODING_STANDARDS.md  COLOCATION_PATTERNS.md  COMPREHENSIVE_CODE_REVIEW.md  (+38 more)
(+181 files in other folders)
