[package]
name = "vscode-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
scopeguard = "1.2"
gethostname = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
